--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,16 @@
 <div class="text-center">
-  <h1>Log in</h1>
+  <h1>Sign up</h1>
 </div>
 
 <div class="row">
   <div class="col-sm-6 offset-sm-3">
 
-    <%= form_with(url: login_path, scope: :session, local: true) do |f| %>
+    <%= form_with(model: @user, local: true) do |f| %>
+      
+      <div class="form-group">
+        <%= f.label :name, 'Name' %>
+        <%= f.text_field :name, class: 'form-control' %>
+      </div>
 
       <div class="form-group">
         <%= f.label :email, 'Email' %>
@@ -17,9 +22,12 @@
         <%= f.password_field :password, class: 'form-control' %>
       </div>
 
-      <%= f.submit 'Log in', class: 'btn btn-primary btn-block' %>
-    <% end %>
+      <div class="form-group">
+        <%= f.label :password_confirmation, 'Confirmation' %>
+        <%= f.password_field :password_confirmation, class: 'form-control' %>
+      </div>
 
-    <p>New user? <%= link_to 'Sign up now!', signup_path %></p>
+      <%= f.submit 'Sign up', class: 'btn btn-primary btn-block' %>
+    <% end %>
   </div>
 </div>
